[package]
name = "dioxus-hmr"
version = "0.1.0"
edition = "2021"
description = ""
authors = ["Dioxus"]

[dependencies]
dioxus = { path = "C:/Users/Desktop/github/dioxus/packages/dioxus" }
dioxus-desktop = { path = "C:/Users/Desktop/github/dioxus/packages/desktop" }
# dioxus-web = "0.3"
# dioxus = "0.3"
futures-util = "0.3.27"
# wasm-bindgen = "=0.2.84"
